--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -91,6 +91,7 @@ video {
   font: inherit;
   vertical-align: baseline;
   text-decoration: none;
+  color: #000;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -108,6 +109,7 @@ section {
 }
 body {
   line-height: 1;
+  background-color: rgb(246, 246, 235);
 }
 ol,
 ul {
@@ -270,9 +272,9 @@ input[type="submit"] {
   color: white;
   background-color: #1d6154;
   margin: 2em auto;
-  width: 180px;
   text-align: center;
   border-radius: 60px;
+  padding: 10px 60px;
 }
 footer nav ul {
   display: flex;
@@ -313,7 +315,7 @@ footer nav ul {
 /******Style mode edition******/
 .topbar {
   width: 100%;
-  height: 59px;
+  height: 50px;
   background-color: #000;
   display: flex;
   justify-content: center;
@@ -356,4 +358,262 @@ footer nav ul {
   position: absolute;
   top: 10px;
   left: 675px;
+}
+
+/*** Click "modifier" to open modal ***/
+
+.container-only-admin {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.update-btn i {
+  padding-right: 10px;
+  font-size: 20px;
+}
+
+/*** CSS Modal ***/
+
+.modal-overlay {
+  position: fixed;
+  display: none; /* Par défaut caché, sera géré via JavaScript */
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 1000; /* Assure que le modal est au-dessus des autres éléments */
+}
+
+/* First window of modal, "modal-works" */
+
+.modal-gallery {
+  width: 44%;
+  height: 730px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  display: none; /* Par défaut caché, sera géré via JavaScript */
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 45px 90px 45px 100px;
+  gap: 10px;
+}
+
+.modal-content figure {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-content img {
+  width: 80px;
+}
+
+.modal-content .work-item .trash,
+.modal-content .work-item .cross {
+  margin-top: 5px;
+  color: #ffffff;
+  background: #000000;
+  border-radius: 2px;
+  text-align: center;
+  position: absolute;
+}
+
+.modal-content .work-item .trash {
+  margin-left: 60px;
+  padding: 4px;
+  font-size: 9px;
+}
+
+.modal-content .work-item .cross {
+  margin-left: 40px;
+  padding: 3.5px;
+  font-size: 10px;
+}
+
+.modal-content .work-item .cross {
+  display: none;
+}
+
+.modal-content .work-item:hover .cross {
+  display: flex;
+}
+
+.modal-content .work-item:hover {
+  cursor: pointer;
+}
+
+.modal-content figcaption {
+  padding-top: 5px;
+}
+
+.modal-close {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding-right: 30px;
+  padding-top: 30px;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.modal-title {
+  font-size: 1.86em;
+  line-height: 30px;
+  text-align: center;
+  padding-top: 15px;
+}
+
+hr {
+  margin: 0 105px;
+  border-top: 1px solid #b3b3b3;
+  border-bottom: 0;
+  border-left: 0;
+  border-right: 0;
+}
+
+.container-modal-add-and-modal-delete {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 40px;
+}
+
+.modal-add {
+  border: none;
+  border-radius: 60px;
+  color: #ffffff;
+  padding: 10px 49px;
+  font-family: "Syne";
+  font-size: 1em;
+  font-weight: 700;
+  background-color: #1d6154;
+  cursor: pointer;
+}
+
+.modal-delete-all {
+  font-size: 1em;
+  line-height: 17px;
+  color: #d65353;
+  padding-top: 20px;
+  cursor: pointer;
+}
+
+/* Second window of modal, "modal-edit" */
+
+.modal-edit-work {
+  width: 630px;
+  height: 670px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  display: none; /* Par défaut caché, sera géré via JavaScript */
+}
+
+.modal-edit-work .container-for-icon-in-second-window-of-modal {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 30px 30px 0 30px;
+  font-size: 15px;
+}
+
+#modal-edit-work-form .modal-content-new-photo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0 19px 0;
+  background-color: #e8f1f7;
+  border-radius: 3px;
+  margin: 35px 105px 0 105px;
+}
+
+.modal-content-new-photo i {
+  font-size: 58px;
+  color: #b9c5cc;
+  padding-bottom: 20px;
+}
+
+.modal-content-new-photo #new-image {
+  background-color: #cbd6dc;
+  border: none;
+  border-radius: 50px;
+  font-family: "Work Sans";
+  font-size: 1em;
+  line-height: 16px;
+  color: #306685;
+  text-align: center;
+  padding: 10px 33px;
+  cursor: pointer;
+}
+
+.modal-content-new-photo #form-image {
+  margin-top: -36px;
+  width: 173px;
+  padding: 8px 0;
+  border: none;
+  border-radius: 50px;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.modal-content-new-photo p {
+  font-size: 0.75em;
+  line-height: 12px;
+  color: #444444;
+  padding-top: 7px;
+}
+
+#modal-edit-work-form .modal-content-new-category-title {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 10px 105px 0 105px;
+}
+
+.modal-content-new-category-title input[type="text"],
+select {
+  height: 51px;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  border: none;
+}
+
+.modal-content-new-category-title #form-title,
+#form-category {
+  color: #444444;
+  padding-left: 16px;
+  font-family: "Work Sans";
+  font-size: 1em;
+}
+
+.modal-content-new-category-title label {
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+.modal-content-new-category-title .border-in-second-window-of-modal {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 45px;
+}
+
+#modal-edit-work-form input[type="submit"] {
+  border-radius: 60px;
+  margin: 30px auto 45px;
+  padding: 10px 90px;
+  border: none;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1em;
+  background-color: #a7a7a7;
+  cursor: pointer;
 }
